--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -1,10 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>https://zack4396.github.io</title>
-    <link rel="canonical" href="https://zack4396.github.io">
-    <meta name="robots" content="noindex">
-    <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=https://zack4396.github.io">
-  </head>
-</html>
+<!doctype html><html lang=en><head><title>https://zack4396.github.io</title>
+<link rel=canonical href=https://zack4396.github.io><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://zack4396.github.io"></head></html>
